(lang dune 3.6)
(name itv-tree)
(generate_opam_files true)
(license BSD-3-Clause)
(source (github  UnixJunkie/interval-tree))
(authors "Francois Berenge")
(maintainers "unixjunkie@sdf.org")
(package
  (name itv-tree)
  (synopsis "Float intervals tree library")
  (description "float intervals tree library"))

