opam-version: "2.0"
synopsis: "Float intervals tree library"
description: "float intervals tree library"
maintainer: ["unixjunkie@sdf.org"]
authors: ["Francois Berenge"]
license: "BSD-3-Clause"
homepage: "https://github.com/UnixJunkie/interval-tree"
bug-reports: "https://github.com/UnixJunkie/interval-tree/issues"
depends: [
  "dune" {>= "1.11"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs "@install"
     "@runtest" {with-test}]
]
dev-repo: "git+https://github.com/UnixJunkie/interval-tree.git"
